decorate LogRecords